Add AdSense script to all pages and ad units to key pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,9 @@
       };
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2000595047734179"
+            crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="{{ url_for('static', filename='app.css') }}" />
   </head>
 
