--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <section class="mx-auto w-full max-w-6xl px-4 pt-12">
+  <section class="mx-auto w-full max-w-6xl px-4">
     <div class="grid gap-8 md:grid-cols-12 md:items-center">
       <div class="md:col-span-7">
         <div class="inline-flex items-center gap-2 rounded-full bg-white/5 px-3 py-1 text-xs font-semibold text-white/70 ring-1 ring-white/10">
