--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -470,7 +470,7 @@ select:focus {
 .prose h3 { font-size: 1.25rem; font-weight: 600; line-height: 1.75rem; margin-top: 1.75rem; margin-bottom: 0.75rem; color: rgb(255 255 255); }
 .prose ul { margin-top: 1rem; margin-bottom: 1rem; padding-left: 1.5rem; }
 .prose li { margin-top: 0.5rem; margin-bottom: 0.5rem; }
-.prose a { color: rgb(255 255 255); text-decoration-line: underline; font-weight: 500; }
+.prose a { color: rgb(255 255 255); font-weight: 500; text-decoration: none; }
 .prose strong { font-weight: 600; color: rgb(255 255 255); }
 .prose code { font-size: 0.875rem; font-weight: 600; color: rgb(241 245 249); background-color: rgb(30 41 59); padding: 0.125rem 0.375rem; border-radius: 0.375rem; }
 @media (min-width: 768px) {
@@ -522,5 +522,5 @@ select:focus {
 .prose h3 { font-size: 1rem; font-weight: 600; line-height: 1.5rem; margin-top: 1.25rem; margin-bottom: 0.5rem; color: rgb(255 255 255); }
 .prose ul { margin-top: 0.75rem; margin-bottom: 0.75rem; padding-left: 1.25rem; }
 .prose li { margin-top: 0.25rem; margin-bottom: 0.25rem; }
-.prose a { color: rgb(255 255 255); text-decoration-line: underline; font-weight: 500; }
+.prose a { color: rgb(255 255 255); font-weight: 500; text-decoration: none; }
 .prose strong { font-weight: 600; color: rgb(255 255 255); }
